<resources>
    <string name="app_name">Instakek</string>

    <string name="no_internet_error">No internet connection available!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b></string>
    <string name="name_for_register">First name and second name</string>
    <string name="email">Email</string>
    <string name="name">First name and second name</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="reposted_fom">Reposted from :</string>

    <string name="post_likes">%1$s keks given</string>
    <string name="post_likes_loading">Loading your keks...</string>
    <string name="post_channel_name_loading">Loading channel name...</string>
    <string name="username_or_Email">Username or Email</string>


</resources>
