<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    >

    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPepe"
        android:id="@+id/insta_kek_text"
        android:text="@string/app_name"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:typeface="monospace" android:fontFamily="sans-serif"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/insta_kek_text"
        android:id="@+id/email"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        android:textColorLink="@color/colorPepe"
        />

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:id="@+id/name"
        android:layout_margin="16dp"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:textColorLink="@color/colorPepe"
        />


    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:id="@+id/secondname"
        android:layout_margin="16dp"
        android:inputType="textPersonName"
        android:hint="Second name"
        android:textColorLink="@color/colorPepe"
        />


    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/secondname"
        android:id="@+id/username"
        android:layout_margin="16dp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColorLink="@color/colorPepe"
        />

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:id="@+id/passwod"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColorLink="@color/colorPepe"
        />

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwod"
        android:background="@color/colorPepe"
        android:text="@string/registration"
        android:id="@+id/register_buttn"
        />



</android.support.constraint.ConstraintLayout>
</ScrollView>