<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:fillViewport="true"
    android:id="@+id/login_form"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPepe"
            android:id="@+id/insta_kek_text"
            android:text="@string/app_name"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:typeface="monospace" android:fontFamily="sans-serif"/>

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/insta_kek_text"
            android:id="@+id/usernameOrEmail"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/username_or_Email"
            android:textColorLink="@color/colorPepe"
            />

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/usernameOrEmail"
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColorLink="@color/colorPepe"
            />



        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:background="@drawable/my_button_bg"
            android:id="@+id/email_sign_in_button"
            android:text="Log In"
            />



    </android.support.constraint.ConstraintLayout>
</ScrollView>
<Button
android:layout_width="match_parent"
android:id="@+id/create_acc"
android:layout_height="35dp"
app:layout_constraintBottom_toBottomOf="@+id/login_form"
android:text="@string/create_account"
android:gravity="center"
android:background="@drawable/top_border_grey"
android:layout_marginTop="200dp"
android:textAllCaps="false"
style="?android:attr/borderlessButtonStyle"

    />
</android.support.constraint.ConstraintLayout>